refactor: 정산 로직 도메인으로 이동