@@ -1,11 +1,12 @@
 package lotto.domain;
 
+import static java.util.stream.Collectors.toMap;
+
 import java.util.EnumMap;
 import java.util.EnumSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class PurchasedLottoBundle {
     private final List<Lotto> lottoBundle;
@@ -15,17 +16,21 @@ public class PurchasedLottoBundle {
     }
 
     public WinningResults checkWinningResults(AnswerLotto answerLotto) {
-        return new WinningResults(EnumSet.allOf(LottoRewardTable.class).stream()
-                .collect(Collectors.toMap(
-                        Function.identity(),
-                        result -> lottoBundle.stream()
-                                .map(answerLotto::match)
-                                .map(LottoMatchingTable::of)
-                                .filter(m -> Objects.equals(result.getLottoMatchingTable(), m))
-                                .count(),
+        return new WinningResults(EnumSet.allOf(LottoRewardTable.class)
+                .stream()
+                .collect(toMap(Function.identity(),
+                        lottoRewardTable -> calculateMatchCount(answerLotto, lottoRewardTable),
                         (prev, next) -> next,
                         () -> new EnumMap<>(LottoRewardTable.class)
                 )));
+    }
+
+    private long calculateMatchCount(AnswerLotto answerLotto, LottoRewardTable lottoRewardTable) {
+        return lottoBundle.stream()
+                .map(answerLotto::match)
+                .map(LottoMatchingTable::of)
+                .filter(lottoMatchingTable -> Objects.equals(lottoRewardTable.getLottoMatchingTable(), lottoMatchingTable))
+                .count();
     }
 
     public int getQuantity() {
@@ -33,8 +38,8 @@ public class PurchasedLottoBundle {
     }
 
     public <T> List<T> convert(Function<Lotto, T> function) {
-        return lottoBundle.stream().map(function)
-                .collect(Collectors.toList());
-
+        return lottoBundle.stream()
+                .map(function)
+                .toList();
     }
 }
